--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="bg-light py-5">
     <div class="container py-5">
         <div class="d-flex justify-content-center align-items-center">
-            <div class="show p-5 w-50 text-center">
+            <div class="show p-5 w-100 w-lg-50 text-center">
                 <img class="mb-3" src="./img/signal-alt-2-free-icon-font (1).png" alt="Signal" style="height: 100px; width: 100px">
                 <h3 class="text-success">Goodies of the Doodles</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
@@ -170,15 +170,15 @@
 <!-- FOURTH ROW -->
 <div class="bg-light py-5">
     <div class="container py-5">
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="show p-5">
+        <div class="d-flex flex-column flex-md-row gap-md-5 justify-content-center align-items-center">
+            <div class="show py-5">
                 <img class="mb-3" src="./img/bookmark-free-icon-font.png" alt="Signal" style="height: 100px; width: 100px">
                 <h3 class="text-success">Goodies of the Doodles</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
                     illo voluptas totam quasi adipisci. Porro tenetur alias fugiat culpa esse ipsam voluptates nam deleniti?</p>
             </div>
 
-            <div class="show p-5">
+            <div class="show py-5">
                 <img class="mb-3" src="./img/comment-free-icon-font.png" alt="Signal" style="height: 100px; width: 100px">
                 <h3 class="text-success">Goodies of the Doodles</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
