Updated the footer contents

--- a/index.html
+++ b/index.html
@@ -188,6 +188,98 @@
     </div>
 </div>
 
+<!-- FIFTH ROW -->
+<div class="py-5" style="background-color: #0a150d;">
+    <div class="container">
+        <div class="row py-5" style="font-size: 0.8rem">
+            <!-- FOOTER ONE -->
+            <div class="col-6 col-md-3">
+                <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
+                <nav class="nav flex-column ps-0 ms-0" >
+                    <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs</a>
+                    <a class="nav-link ps-0 fw-light text-light" href="#">Redux</a>
+                    <a class="nav-link ps-0 fw-light text-light" href="#">Javascript</a>
+                    <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs</a>
+                    <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs</a>
+                    <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB</a>
+                </nav>
+            </div>
+
+            <!-- FOOTER TWO -->
+            <div class="col-6 col-md-3">
+                <div class="d-flex flex-column gap-4">
+                    <div class="sec">
+                        <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
+                        <nav class="nav flex-column ps-0 ms-0">
+                            <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Redux wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Javascrip wet corssett</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB wet corsset</a>
+                        </nav>
+                    </div>
+
+                    <div class="sec">
+                        <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
+                        <nav class="nav flex-column ps-0 ms-0">
+                            <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Redux solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Javascript solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB solace dense</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+
+            <!-- FOOTER THREE -->
+            <div class="col-6 col-md-3">
+                <div class="d-flex flex-column gap-4">
+                    <div class="sec">
+                        <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
+                        <nav class="nav flex-column ps-0 ms-0">
+                            <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Redux wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Javascript wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB wet corsset</a>
+                        </nav>
+                    </div>
+
+                    <div class="sec">
+                        <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
+                        <nav class="nav flex-column ps-0 ms-0">
+                            <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Redux solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Javascript solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB solace dense</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+
+            <!-- FOOTER FOUR -->
+            <div class="col-6 col-md-3">
+                <h4 class="fw-normal fs-6" style="color: #cceecc">Follow Us</h4>
+                <div class="social">
+                    <i class="fa fa-twitter-square"></i>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-whatsapp"></i>
+                    <i class="fa fa-facebook-official"></i>
+                </div>
+                <div class="social-text fs-6 lh-base text-light">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, laudantium nemo? Dicta esse ipsam doloremque.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
