--- a/index.html
+++ b/index.html
@@ -10,6 +10,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <!-- HEADER AND NAV -->
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
+        <div class="container-fluid container-md">
+            <a class="navbar-brand" href="#">
+                <img src="./img/bookmark-free-icon-font.png" alt="logo" width="30" height="24" class="d-inline-block align-text-top me-2">
+                Viron
+            </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link pe-lg-5 active" aria-current="page" href="#">Bootstrap</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-lg-5" href="#">Reactjs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-lg-5" href="#">Javascript</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-lg-5" href="#">MongoDB</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-lg-5" href="#">Redux</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-lg-5" href="#">Expressjs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Nodejs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
     <!-- FIRST ROW -->
 <div class="container">
     <div class="row g-3">
@@ -168,8 +206,8 @@
 </div>
 
 <!-- FOURTH ROW -->
-<div class="bg-light py-5">
-    <div class="container py-5">
+<div class="bg-light py-0 py-lg-5">
+    <div class="container py-0 py-lg-5">
         <div class="d-flex flex-column flex-md-row gap-md-5 justify-content-center align-items-center">
             <div class="show py-5">
                 <img class="mb-3" src="./img/bookmark-free-icon-font.png" alt="Signal" style="height: 100px; width: 100px">
@@ -178,7 +216,7 @@
                     illo voluptas totam quasi adipisci. Porro tenetur alias fugiat culpa esse ipsam voluptates nam deleniti?</p>
             </div>
 
-            <div class="show py-5">
+            <div class="show pb-5 pb-md-0 py-lg-5">
                 <img class="mb-3" src="./img/comment-free-icon-font.png" alt="Signal" style="height: 100px; width: 100px">
                 <h3 class="text-success">Goodies of the Doodles</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
@@ -189,24 +227,40 @@
 </div>
 
 <!-- FIFTH ROW -->
-<div class="py-5" style="background-color: #0a150d;">
+<div class="pt-5 pb-2" style="background-color: #0a150d;">
     <div class="container">
-        <div class="row py-5" style="font-size: 0.8rem">
+        <div class="row py-5 border-bottom" style="font-size: 0.8rem">
             <!-- FOOTER ONE -->
             <div class="col-6 col-md-3">
-                <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
-                <nav class="nav flex-column ps-0 ms-0" >
-                    <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs</a>
-                    <a class="nav-link ps-0 fw-light text-light" href="#">Redux</a>
-                    <a class="nav-link ps-0 fw-light text-light" href="#">Javascript</a>
-                    <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs</a>
-                    <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs</a>
-                    <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB</a>
-                </nav>
+                <div class="d-flex flex-column gap-4">
+                    <div class="sec">
+                        <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
+                        <nav class="nav flex-column ps-0 ms-0">
+                            <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Redux wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Javascrip wet corssett</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs wet corsset</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB wet corsset</a>
+                        </nav>
+                    </div>
+
+                    <div class="sec">
+                        <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
+                        <nav class="nav flex-column ps-0 ms-0">
+                            <a class="nav-link ps-0 fw-light active text-light" href="#">Reactjs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Redux solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Javascript solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs solace dense</a>
+                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB solace dense</a>
+                        </nav>
+                    </div>
+                </div>
             </div>
 
             <!-- FOOTER TWO -->
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-3 mb-5 mb-lg-0">
                 <div class="d-flex flex-column gap-4">
                     <div class="sec">
                         <h4 class="fw-normal fs-6" style="color: #cceecc">Courses Offered</h4>
@@ -266,15 +320,33 @@
             <!-- FOOTER FOUR -->
             <div class="col-6 col-md-3">
                 <h4 class="fw-normal fs-6" style="color: #cceecc">Follow Us</h4>
-                <div class="social">
-                    <i class="fa fa-twitter-square"></i>
-                    <i class="fa fa-instagram"></i>
-                    <i class="fa fa-whatsapp"></i>
+                <div class="social text-light py-2">
+                    <i class="fa fa-twitter-square pe-4"></i>
+                    <i class="fa fa-instagram pe-4"></i>
+                    <i class="fa fa-whatsapp pe-4"></i>
                     <i class="fa fa-facebook-official"></i>
                 </div>
                 <div class="social-text fs-6 lh-base text-light">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, laudantium nemo? Dicta esse ipsam doloremque.</p>
                 </div>
+            </div>
+        </div>
+        <div class="row" style="font-size: 0.8rem">
+            <div class="col pt-2">
+                <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link text-light ps-0 pe-5" href="#">Privacy Policy</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light pe-5" href="#">Cookies</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light pe-5" href="#">Investors</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light" href="#">&copy; Copyright. All rights reserved. 2023</a>
+                    </li>
+                  </ul>
             </div>
         </div>
     </div>
