Added more contents after the nav bar

--- a/index.html
+++ b/index.html
@@ -48,6 +48,41 @@
         </div>
       </nav>
 
+      <!-- SHOWCASE -->
+      <div class="bg-light py-5">
+        <div class="container py-md-5">
+                <div class="d-flex flex-column gap-4 p-5">
+                    <!-- one -->
+                    <div class="d-flex align-items-center justify-content-center gap-5">
+                        <img class="" src="./img/comment-free-icon-font.png" alt="comment" style="height: 100px; width: 100px">
+                        <div class="w-50">
+                            <h3 class="text-success">Goodies of the Doodles</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
+                            illo voluptas totam quasi adipisci. Porro tenetur alias fugiat culpa esse ipsam voluptates nam deleniti?</p>
+                        </div>
+                    </div>
+                    <!-- two -->
+                    <div class="d-flex align-items-center justify-content-center gap-5">
+                        <img class="" src="./img/comment-free-icon-font.png" alt="comment" style="height: 100px; width: 100px">
+                        <div class="w-50">
+                            <h3 class="text-success">Goodies of the Doodles</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
+                            illo voluptas totam quasi adipisci. Porro tenetur alias fugiat culpa esse ipsam voluptates nam deleniti?</p>
+                        </div>
+                    </div>
+                    <!-- three -->
+                    <div class="d-flex align-items-center justify-content-center gap-5">
+                        <img class="" src="./img/comment-free-icon-font.png" alt="comment" style="height: 100px; width: 100px">
+                        <div class="w-50">
+                            <h3 class="text-success">Goodies of the Doodles</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
+                            illo voluptas totam quasi adipisci. Porro tenetur alias fugiat culpa esse ipsam voluptates nam deleniti?</p>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </div>
+
     <!-- FIRST ROW -->
 <div class="container">
     <div class="row g-3">
@@ -57,10 +92,10 @@
                 <div class="card-header fw-bold text-success">
                   Education
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title text-dark">More Value</h5>
-                    <h6 class="card-subtitle text-secondary">Balancing the System</h6>
-                    <p class="card-text">
+                <div class="card-body p-0">
+                    <h5 class="card-title bg-secondary fs-6 p-1" style="color: #cceecc">More Value</h5>
+                    <h6 class="card-subtitle text-secondary py-1">Balancing the System</h6>
+                    <p class="card-text bg-light mb-0 pb-2 pt-1 px-3">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Voluptates, praesentium dolorem. Aliquid amet dolore nisi.</p>
                     <div class="d-grid">
@@ -76,10 +111,10 @@
                 <div class="card-header fw-bold text-success">
                   Working Times
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title text-dark">Lectures</h5>
-                    <h6 class="card-subtitle text-secondary">Balancing the System</h6>
-                    <p class="card-text">
+                <div class="card-body p-0">
+                    <h5 class="card-title bg-secondary fs-6 p-1" style="color: #cceecc">Lectures</h5>
+                    <h6 class="card-subtitle text-secondary py-1">Balancing the System</h6>
+                    <p class="card-text bg-light mb-0 pb-2 pt-1 px-3">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Voluptates, praesentium dolorem. Aliquid amet dolore nisi.</p>
                     <div class="d-grid">
@@ -94,10 +129,10 @@
                 <div class="card-header fw-bold text-success">
                   Frameworks
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title text-dark">Resultant Effect</h5>
-                    <h6 class="card-subtitle text-secondary">Balancing the System</h6>
-                    <p class="card-text">
+                <div class="card-body p-0">
+                    <h5 class="card-title bg-secondary fs-6 p-1" style="color: #cceecc">Resultant Effect</h5>
+                    <h6 class="card-subtitle text-secondary py-1">Balancing the System</h6>
+                    <p class="card-text bg-light mb-0 pb-2 pt-1 px-3">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Voluptates, praesentium dolorem. Aliquid amet dolore nisi.</p>
                     <div class="d-grid">
@@ -112,10 +147,10 @@
                 <div class="card-header fw-bold text-success">
                   Services
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title text-dark">Beginner Intake</h5>
-                    <h6 class="card-subtitle text-secondary">Balancing the System</h6>
-                    <p class="card-text">
+                <div class="card-body p-0">
+                    <h5 class="card-title bg-secondary fs-6 p-1" style="color: #cceecc">Beginner Intake</h5>
+                    <h6 class="card-subtitle text-secondary py-1">Balancing the System</h6>
+                    <p class="card-text bg-light mb-0 pb-2 pt-1 px-3">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Voluptates, praesentium dolorem. Aliquid amet dolore nisi.</p>
                     <div class="d-grid">
@@ -130,14 +165,12 @@
 <!-- SECOND ROW -->
 <div class="bg-light py-5">
     <div class="container py-5">
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="show p-5 w-100 w-lg-50 text-center">
-                <img class="mb-3" src="./img/signal-alt-2-free-icon-font (1).png" alt="Signal" style="height: 100px; width: 100px">
+            <div class="d-flex flex-column align-items-center p-5 text-center">
+                <img class="mb-3" src="./img/signal-alt-2-free-icon-font (1).png" alt="comment" style="height: 100px; width: 100px">
                 <h3 class="text-success">Goodies of the Doodles</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
+                <p class="w-100 w-lg-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam corporis esse illum vitae deserunt quae, 
                     illo voluptas totam quasi adipisci. Porro tenetur alias fugiat culpa esse ipsam voluptates nam deleniti?</p>
             </div>
-        </div>
     </div>
 </div>
 
@@ -240,8 +273,6 @@
                             <a class="nav-link ps-0 fw-light text-light" href="#">Redux wet corsset</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Javascrip wet corssett</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs wet corsset</a>
-                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs wet corsset</a>
-                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB wet corsset</a>
                         </nav>
                     </div>
 
@@ -253,7 +284,6 @@
                             <a class="nav-link ps-0 fw-light text-light" href="#">Javascript solace dense</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs solace dense</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs solace dense</a>
-                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB solace dense</a>
                         </nav>
                     </div>
                 </div>
@@ -281,8 +311,6 @@
                             <a class="nav-link ps-0 fw-light text-light" href="#">Redux solace dense</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Javascript solace dense</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs solace dense</a>
-                            <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs solace dense</a>
-                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB solace dense</a>
                         </nav>
                     </div>
                 </div>
@@ -311,7 +339,6 @@
                             <a class="nav-link ps-0 fw-light text-light" href="#">Javascript solace dense</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Nodejs solace dense</a>
                             <a class="nav-link ps-0 fw-light text-light" href="#">Expressjs solace dense</a>
-                            <a class="nav-link ps-0 fw-light text-light" href="#">MongoDB solace dense</a>
                         </nav>
                     </div>
                 </div>
